# wrinkleFE

./: .gitignore  .readthedocs.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CZM_PLAN.md  DEPLOYMENT_STREAMLIT.md  LICENSE  README.md  VALIDATION.md  _calibrate_mmb25.py  app.py  pyproject.toml  requirements-test.txt  requirements.txt  streamlit_app.py  streamlit_viz.py  usage_tracking.py  wrinklefe_windows.spec
.claude/skills/expand-mypy-coverage/: SKILL.md
.claude/skills/fix-ruff-violations/: SKILL.md
.claude/skills/pre-commit-hooks/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml  validation_discrepancy.yml
.github/workflows/: build-windows.yml  ci.yml  lint.yml  tests.yml
.streamlit/: secrets.toml.example
docs/: architecture.md  conf.py  czm_plan.md  deployment_streamlit.md  getting_started.md  index.md  overview.md  theory.md  validation.md  wrinkle_modeling_findings.md
docs/api/: analysis.rst  cli.rst  convergence.rst  core.rst  failure.rst  index.rst  io.rst  solver.rst  stochastic.rst
docs/internal/: ARCHITECTURE.md  DEPLOYMENT_STREAMLIT.md  VALIDATION.md  WRINKLE_MODELING_FINDINGS.md
examples/: .gitignore  01_basic_knockdown.py  02_parametric_sweep.py  03_morphology_comparison.py  04_czm_delamination.py  05_export_roundtrip.py  06_custom_material.py  07_mesh_convergence.py  08_multi_wrinkle_czm_linkup.py  README.md  basic_analysis.py  montecarlo_analysis.py  parametric_study.py  transverse_wrinkle_knockdown.py
joss/: paper.bib  paper.md  paper.tex
scripts/: build_app.py  build_macos.sh  build_windows.bat  rthook_clean_path.py  validate.py
src/wrinklefe/: __init__.py  analysis.py  cli.py  convergence.py  stochastic.py
src/wrinklefe/core/: __init__.py  cohesive_mesh.py  laminate.py  layup.py  material.py  mesh.py  morphology.py  penetration_gate.py  resin_pocket.py  transforms.py  wrinkle.py
src/wrinklefe/elements/: __init__.py  cohesive8.py  gauss.py  hex8.py  hex8i.py
src/wrinklefe/failure/: __init__.py  base.py  delamination.py  evaluator.py  hashin.py  kinkband.py  larc05.py  max_strain.py  max_stress.py  progressive.py  puck.py  tsai_hill.py  tsai_wu.py
src/wrinklefe/gui/: __init__.py  __main__.py  main_window.py
src/wrinklefe/io/: __init__.py  (+2 more)
tests/: conftest.py  test_amplitude_contract_dual_wrinkle.py  test_amplitude_definition.py  test_analysis_config.py  test_analysis_config_interface_defaults.py  test_analysis_config_no_dead_fields.py  test_analysis_czm.py  test_analysis_progress.py  test_analysis_sweep.py  test_analytical_modulus.py  test_analytical_modulus_multi_wrinkle.py  test_app_config_io.py  test_app_cross_section.py  test_app_czm.py  test_app_reset_inputs.py  test_app_staleness.py  test_app_surface_pockets.py  test_app_tabs.py  test_buckling.py  test_changelog.py  test_cli.py  test_cli_amplitude_profile.py  test_cli_czm.py  test_cli_issues_7_8_9.py  test_config_io.py  test_confinement.py  test_convergence.py  test_graded_morphology_regression.py  test_laminate.py  test_layup.py  test_logging_conventions.py  test_material.py  test_material_library_completeness.py  test_max_consecutive_zero_plies.py  test_mesh.py  test_modulus_retention_failure.py  test_modulus_retention_global.py  test_morphology.py  test_morphology_amplitude_profile.py  test_morphology_apply_nodes.py  (+21 more)
tests/core/: test_cohesive_mesh.py
tests/integration/: test_4pb_experimental_validation.py  test_cohesive_newton_integration.py  test_dcb_arclength.py  test_dcb_experimental_validation.py  test_dcb_monotonic.py  test_enf_experimental_validation.py  test_enf_monotonic.py  test_mmb_25_experimental_validation.py  test_mmb_50_experimental_validation.py  test_mmb_75_experimental_validation.py  test_mmb_mixity_synthesis.py
tests/test_benchmarks/: README.md  conftest.py  test_bench_assembly.py  test_bench_czm_newton.py  test_bench_failure_field.py  test_bench_modulus_knockdown.py  test_bench_morphology.py  test_bench_static_solve.py
tests/test_elements/: test_cohesive8_law.py  test_gauss.py  test_hex8.py  test_hex8i.py
tests/test_failure/: test_criteria.py  test_evaluate_field_vectorised.py  test_evaluator.py  test_evaluator_laminate_context.py  test_hashin.py  test_hashin_matrix_compression_rf.py  test_kinkband.py  test_larc05.py  test_max_strain.py  test_max_stress.py  test_progressive.py  test_puck.py  test_tsai_hill.py  test_tsai_wu.py  test_vectorized_field_issue299.py
tests/test_integration/: test_analysis.py  test_blocked_layup_confinement.py  test_elhajjar_validation.py  test_multi_wrinkle.py  test_multi_wrinkle_czm.py  test_multi_wrinkle_fe.py  test_tension_onset.py  test_tension_validation.py  test_through_thickness_decay.py  test_wavelength_estimation.py  test_wrinkle_z_position.py
tests/test_io/: test_export.py  test_export_results.py
tests/test_solver/: test_arclength_snapback.py  test_boundary.py  test_extrapolate.py  test_newton_softening.py  test_recover_element_results_parity.py  test_results_max_location.py  test_results_vectorized_issue295.py  test_static.py
tests/test_validation/: ledger.json  test_ledger.py
tests/test_viz/: test_failure_mode_breakdown.py  test_no_figure_leak.py  test_plots_2d.py  test_plots_3d_boundary_culling.py  test_plots_3d_box_aspect.py
validation/: .gitignore  VALIDATION_REPORT.md  check_oop_stress.py  d2_kink_micromechanics.py  d3_two_parameter.py  dataset_predictions.csv  diag_crest_pocket.py  explore_dt_severity.py  li_progressive_E.csv  li_progressive_EF.csv  li_progressive_EF_crackband.csv  li_progressive_E_crackband.csv  li_progressive_E_nx16.csv  optimize_decay_floor.py  plot_all_validation.py  plot_modulus_validation.py  plot_predicted_vs_experimental.py  plot_validation.py  predicted_vs_experimental.csv  probe_crackband_mesh.py  reference_data.json  reference_elhajjar2025.json  tune_gf.py  validate_dataset.py  validate_elhajjar2025.py  validate_elhajjar2025_tension.py  validate_jin2026.py  validate_li_progressive.py  validate_modulus.py  validate_tension_analytical.py  viz_li_fe.py
(+22 files in other folders)
