[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wrinklefe"
version = "1.0.0"
description = "Finite element analysis of wrinkled composite laminates with advanced failure theories"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Elhajjar Research Group"},
]
keywords = ["composites", "finite-element", "wrinkle", "failure", "laminate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyvista>=0.42",
]

# Note: wrinklefe is Streamlit-first / CLI-only and has no desktop GUI code.
# pyvistaqt and PyQt6 are intentionally NOT listed (including not in any extra)
# so plain `pip install wrinklefe` produces a headless-safe environment. See
# requirements.txt for the rationale.
[project.optional-dependencies]
# Streamlit web app deps — keep versions in sync with requirements.txt.
streamlit = [
    "streamlit>=1.57",
    "plotly>=6.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
docs = [
    "sphinx>=8.0",
    "myst-parser>=4.0",
    "furo>=2024.8",
]
all = ["wrinklefe[streamlit,dev,docs]"]

[project.scripts]
wrinklefe = "wrinklefe.cli:main"

[project.urls]
Documentation = "https://wrinklefe.readthedocs.io"
Repository = "https://github.com/elhajjar1/wrinkleFE"
Issues = "https://github.com/elhajjar1/wrinkleFE/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wrinklefe = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
